--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "axios": "^0.21.2",
     "hexo": "^4.0.0",
     "hexo-cli": "^3.1.0",
