--- a/.github/workflows/collect_push.yml
+++ b/.github/workflows/collect_push.yml
@@ -1,11 +1,10 @@
-
 name: Collect and Push
 on:
   push:
     branches:
       - src
   schedule:
-    - cron:  '0,30 * * * *'
+    - cron: "0,30 * * * *"
 
 jobs:
   Collect-And-Push:
@@ -17,7 +16,7 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-node@v2
         with:
-          node-version: '10'
+          node-version: "14"
       - run: npm install
       - run: .travis/pre_push.sh
       - run: npm run fetch
